k8s/base/apps/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "dummy-open-webui.example.com" # This will be patched by the overlay
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: open-webui-service
              port:
                number: 8080
